traces/bug_191.txt
examples++-mpi/dSuperLU_DIST.cpp:473: error: DEAD_STORE
  The value written to &nrhs (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/dSuperLU_DIST.cpp:473:2: Write of unused value
471.   	SUPERLU_FREE( B );
472.   	options.Fact = FACTORED; /* Indicate the factored form of A is supplied. */
473.   	nrhs=1;
        ^
474.   	SUPERLU_FREE(berr);  	
475.         }
